--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "dayjs": "^1.11.13",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
